# lcr-e7-28

./: README.md  main.py  main.ui  pyproject.toml  ui_full_main.py  ui_main.py
client_faker/: client_faker.py
server/: commander.py  cp2103_example.py  gui_pyqt_script.py  gui_tkinter_script.py  main.py  main_script.py
server/tools/: command.py
